# FuzzyGEPredictor

./: .gitignore  CMakeLists.txt  FuzzyGEPredictor.sln  README.md  dis.fis  dis.fll  electdata_2017.csv  polling_toDec2017.csv
FuzzyGEPredictor/: CMakeLists.txt
FuzzyGEPredictor/headers/: Constituency.h  ConstituencyArea.h  ConstituencyRegion.h  FuzzyGEPredictor.h  PollingReader.h  Predictor.h  PredictorEngine.h
FuzzyGEPredictor/src/: Constituency.cpp  ConstituencyArea.cpp  ConstituencyRegion.cpp  FuzzyGEPredictor.cpp  PollingReader.cpp  Predictor.cpp  PredictorEngine.cpp
electdata/: electdata_1983.csv  electdata_1987.csv  electdata_1992ob.csv  electdata_1997.csv  electdata_2001ob.csv  electdata_2005ob.csv  electdata_2010.csv  electdata_2015.csv
enginesettings/: FuzzyModel.fis
fis/: dissertation.fis  input
pollingdata/: polling_toMay2017.csv
